k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-python-service
spec:
  selector:
    app: devsu-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
